# pulp

./: .gitignore  README.md  install.sh
.github/workflows/: build.yml
core/: Cargo.toml
core/include/: pulp_core.h
core/src/: decode.rs  encode.rs  ffi.rs  image.rs  lib.rs  resize.rs
macos/: project.yml
macos/Pulp/: ContentView.swift  PulpApp.swift
macos/Pulp/Bridge/: PulpCore-Bridging-Header.h  PulpCore.swift
macos/Pulp/Models/: AppState.swift  EncodeSettings.swift  ImageDocument.swift
macos/Pulp/Resources/: Info.plist
macos/Pulp/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/Pulp/Views/: CropSheet.swift  DropZone.swift  ImageCard.swift  ImageGrid.swift  SaveAllSheet.swift  SettingsBar.swift
scripts/: build-core.sh  build-icons.sh
